# Exploring-the-usage-of-Unreal-Engine-4-asa-planetary-rover-locomotion-simulator

./: README.md
Source Code/Chapter 3/Gazebo Code/: CMakeLists.txt  README.txt  force_pattern.cc  force_pattern_experiment.world
Source Code/Chapter 3/Theoretical Solution Code/: Theoretical_Solutions_Generator.ipynb
Source Code/Chapter 3/Unreal Engine Code/: PhysicsExperiments.uproject
Source Code/Chapter 3/Unreal Engine Code/Config/: DefaultEngine.ini  DefaultGame.ini
Source Code/Chapter 3/Unreal Engine Code/Source/: PhysicsExperiments.Target.cs  PhysicsExperimentsEditor.Target.cs
Source Code/Chapter 4/Gazebo Code/: boxes.cc  boxes_dt.cc  boxes_results.ipynb
Source Code/Chapter 4/Gazebo Code/.ipynb_checkpoints/: boxes_description-checkpoint.ipynb  boxes_results-checkpoint.ipynb
Source Code/Chapter 4/Gazebo Code/launch/: test.launch
Source Code/Chapter 4/Gazebo Code/test_results/: .~lock.BENCHMARK_boxes_dt_2021-02-05T10_51_02.csv#  BENCHMARK_boxes_dt_2021-02-05T12_41_55.csv  BENCHMARK_boxes_dt_2021-02-05T12_43_41.csv  BENCHMARK_boxes_dt_2021-02-05T12_52_39.csv  BENCHMARK_boxes_dt_2021-02-05T12_57_24.csv  BENCHMARK_boxes_dt_2021-02-05T16_22_34.csv  BENCHMARK_boxes_dt_2021-02-06T14_15_38.csv  (+4 more)
Source Code/Chapter 4/Unreal Engine Code/: Benchmark_01.uproject
Source Code/Data Visualisation/: Gazebo_Data_Transformation.ipynb  Main_Plotting.ipynb
Source Code/Rover Simulation/Gazebo Code/: CMakeLists.txt  model.config  model.sdf  rover_movement.cc  rover_movement.world
Source Code/Rover Simulation/Unreal Engine Code/: Rover_Simulation.uproject
(+302 files in other folders)
